fix:fix Burger-menu visibility 2

--- a/src/index.scss
+++ b/src/index.scss
@@ -275,26 +275,24 @@ body {
     text-transform: uppercase;
   }
   .burger-nav {
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: flex-end;
     width: 100vw;
     height: 100vh;
     position: fixed;
     z-index: 10;
-    transform: translate(20%);
-    transition: all 0.2s;
+    transform: translate(-80%);
+    visibility: hidden;
   }
   .burger-active{
-    transform: translate(-80%);
-    transition: all 0.2s;
-    display: flex;
+    visibility: visible;
   }
   .blur {
     width: 100%;
     height: 100vh;
     backdrop-filter: blur(2px);
-    transition: all 0.4s;
+   
   }
 }
 @media (max-width: 490px) {
